syntax = "proto3";
package junction.junction;

option go_package = "github.com/ComputerKeeda/junction/x/junction/types";

message Pods {
  
  uint64 podNumber = 1; 
  string merkleRootHash = 2; 
  string previousMerkleRootHash = 3; 
  bytes zkProof = 4;
}
